--- a/style.css
+++ b/style.css
@@ -3,21 +3,26 @@
 /* import colors */
 :root {
   /* background colors */
-  --pecan-bg: #fafafa;
   --pecan-bg-pecanworkspace: #202020;
-  --pecan-bg-pecannetwork: var(--pecan-bg-pecanworkspace);
   --pecan-bg-pecandate: var(--pecan-bg-pecanworkspace);
-  --pecan-bg-pecanbattery: var(--pecan-bg-pecanworkspace);
   --pecan-bg-pecanclock: var(--pecan-bg-pecanworkspace);
-  --pecan-xanthia-bg: var(--pecan-bg-pecanworkspace);
   --pecan-xanthia-image-bg: var(--pecan-bg-pecanworkspace);
+  --pecan-bg: hsl(206, 75%, 86%);
+  --pecan-bg-pecanworkspace: #ff778f;
+  --pecan-bg-pecannetwork: var(--pecan-bg-pecandate);
+  --pecan-bg-pecandate: rgba(74, 49, 97, .75);
+  --pecan-bg-pecanbattery: var(--pecan-bg-pecandate);
+  --pecan-bg-pecanclock: var(--pecan-bg-pecandate);
+  --pecan-bg-pecanload: var(--pecan-bg-pecandate);
+  --pecan-xanthia-bg: var(--pecan-bg-pecandate);
+  --pecan-xanthia-image-bg: var(--pecan-bg-pecandate);
   /* foreground colors */
-  --pecan-fg-pecanworkspace: #fafafa;
-  --pecan-fg-pecannetwork: var(--pecan-fg-pecanworkspace);
-  --pecan-fg-pecandate: var(--pecan-fg-pecanworkspace);
-  --pecan-fg-pecanbattery: var(--pecan-fg-pecanworkspace);
-  --pecan-fg-pecanclock: var(--pecan-fg-pecanworkspace);
-  --pecan-xanthia-fg: var(--pecan-fg-pecanworkspace);
+  --pecan-fg-pecanworkspace: #313161;
+  --pecan-fg-pecannetwork: var(--pecan-fg-pecanclock);
+  --pecan-fg-pecandate: #c1dff6;
+  --pecan-fg-pecanbattery: #f4a1cd;
+  --pecan-fg-pecanclock: #9bd8db;
+  --pecan-xanthia-fg: var(--pecan-fg-pecandate);
   /* size */
   --pecan-height: 30px;
   /* no variables accepted for chunk */
@@ -40,7 +45,7 @@
   --pecan-alignment-top: 0;
   --pecan-alignment-right: 0;
   --pecan-alignment-bottom: auto;
-  --pecan-alignment-left: 0;
+  --pecan-alignment-left: 0px;
   --pecan-xanthia-alignment-top: 0;
   --pecan-xanthia-alignment-right: 0;
   --pecan-xanthia-alignment-bottom: auto;
@@ -50,7 +55,7 @@
   --pecan-xanthia-image-alignment-bottom: auto;
   --pecan-xanthia-image-alignment-left: auto;
   /* padding */
-  --pecan-padding-left: 5px;
+  --pecan-padding-left: 18px;
   --pecan-padding-right: var(--pecan-padding-left);
   --pecan-padding-v: var(--pecan-padding-left);
   --pecan-xanthia-padding-h: calc(var(--pecan-xanthia-image-size) + var(--pecan-xanthia-image-padding-h));
@@ -136,6 +141,7 @@
 /* workspace indicator -- far left */
 .pecanworkspace {
   font: var(--pecan-font-size) var(--pecan-font);
+  font-weight: bold;
   font-style: var(--pecan-font-style);
   color: var(--pecan-fg-pecanworkspace);
   display: inline-block;
@@ -198,7 +204,7 @@
   bottom: var(--pecan-alignment-bottom);
   left: 50%;
   transform: translate(-50%);
-  margin: calc(var(--pecan-padding-v) + var(--pecan-border));
+  margin-top: calc(var(--pecan-padding-v) + var(--pecan-border));
   line-height: var(--pecan-line-height);
   text-align: center;
   border-top-left-radius: var(--pecan-border-radius-inner);
